--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@discordjs/builders": "^1.6.3",
     "@discordjs/rest": "^1.6.0",
     "@discordjs/voice": "^0.17.0",
+    "axios": "^1.7.4",
+    "crypto": "^1.0.1",
     "discord-api-types": "^0.37.46",
     "discord.js": "^14.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.2",
     "libsodium-wrappers": "^0.7.15",
@@ -20,6 +23,7 @@
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
     "tweetnacl": "^1.0.3",
+    "util": "^0.12.5",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
