--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@discordjs/builders": "^1.6.3",
     "@discordjs/rest": "^1.6.0",
     "@discordjs/voice": "^0.17.0",
+    "@distube/ytdl-core": "^4.14.4",
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.4",
     "discord-api-types": "^0.37.46",
@@ -17,6 +18,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.2",
+    "googleapis": "^142.0.0",
     "libsodium-wrappers": "^0.7.15",
     "lodash.uniqwith": "^4.5.0",
     "moment": "^2.29.4",
@@ -24,9 +26,7 @@
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
     "tweetnacl": "^1.0.3",
-    "util": "^0.12.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "util": "^0.12.5",
+    "ytdl-core": "^4.11.5"
   }
 }
