--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.2",
     "mongoose": "^8.5.4",
-    "play-dl": "^1.9.7",
+    "play-dl": "github:Yoduh/play-dl-test",
     "tweetnacl": "^1.0.3",
     "ytdl-core": "^4.11.5"
   }
